feat(html): adiciona a navegação principal

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 
 <body>
-
-
+  <nav>
+    <ul>
+      <li><a href="#animais">Animais</a></li>
+      <li><a href="#faq">Faq</a></li>
+      <li><a href="#contato">Contato</a></li>
+      <li><a href="https://www.origamid.com/">Dev →</a></li>
+    </ul>
+  </nav>
   <script src="./script.js"></script>
 </body>
 
