feat(html): adiciona a seção de contato

--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
       <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
     </dl>
   </section>
+
+  <section class="grid-section contato" id="contato">
+    <h1>Contato</h1>
+    <div class="mapa">
+      <img src="./img/mapa.png">
+    </div>
+    <ul class="dados">
+      <li>contato@origamid.com</li>
+      <li>+55 (21) 9 9999-9999</li>
+      <li>Rua do Conde, nº 21</li>
+      <li>Rio de Janeiro - RJ</li>
+    </ul>
+  </section>
   <script src="./script.js"></script>
 </body>
 
