--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
       <li>Rio de Janeiro - RJ</li>
     </ul>
   </section>
+
+  <footer>
+    <p>Todos os direitos reservados.</p>
+  </footer>
   <script src="./script.js"></script>
 </body>
 
