--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="https://www.origamid.com/">Dev →</a></li>
     </ul>
   </nav>
+
   <section class="grid-section animais" id="animais">
     <h1 class="titulo">Animais Fantásticos</h1>
     <ul>
@@ -39,7 +40,8 @@
         <img src="./img/imagem6.jpg">
       </li>
     </ul>
-    <div class="animais-descrcao">
+
+    <div class="animais-descricao">
       <section>
         <h2>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
@@ -84,6 +86,7 @@
       </section>
     </div>
   </section>
+
   <section class="grid-section faq" id="faq">
     <h1>FAQ</h1>
     <dl>
@@ -114,7 +117,7 @@
     </ul>
   </section>
 
-  <footer>
+  <footer class="copy">
     <p>Todos os direitos reservados.</p>
   </footer>
   <script src="./script.js"></script>
